--- a/cripto-react/src/pages/Login.css
+++ b/cripto-react/src/pages/Login.css
@@ -29,6 +29,7 @@
 }
 
 .paragrafo, h4 {
+    margin-bottom: 16px;
     font-size: 20px;
 }
 
@@ -51,7 +52,7 @@ input {
     padding: 1rem;
     font-size: 1rem;
     border: 1px solid #ddd;
-    border-radius: 5px;
+    border-radius: 10px;
     background: #f5f5f5;
     outline: none;
     margin-bottom: 1rem;
@@ -63,15 +64,18 @@ input:focus {
 }
 
 #button {
+    background: linear-gradient(135deg, #3f025b, #b12092);
+    color: #fff;
     height: 40px;
+    font-size: 20px;
+    margin-top: 17px;
     border: none;
-    border-radius: 15px;
-    background: linear-gradient(90deg, #8e44ad, #732d91);
-    color: white;
-    font-size: 18px;
-    font-weight: bold;
+    border-radius: 20px;
+    font-family: 'Orbitron', sans-serif;
+    font-size: 17px;
     cursor: pointer;
-    transition: all 0.3s ease;
+    transition: background-color 0.3s ease, color 0.3s ease, box-shadow 0.3s ease;
+    padding: 10px 20px;
 }
 
 button:hover {
