--- a/cripto-react/src/pages/Login.css
+++ b/cripto-react/src/pages/Login.css
@@ -1,24 +1,14 @@
-/* Reset básico */
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: Arial, sans-serif;
-}
 
-/* Centraliza tudo na tela */
+
 .tudo {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
     background-color: #ffffff;
-    padding: 2rem;
 }
 
 .box {
     margin-left: 50px;
-    width: 100%;
     display: flex;
     justify-content: center;
 }
@@ -28,17 +18,12 @@
     color: grey;
 }
 
-.paragrafo, h4 {
-    font-size: 20px;
-}
-
+/* Estilização do formulário */
 form {
-    background: rgba(255, 255, 255, 0.9);
-    padding: 60px;
+    background: rgba(160, 57, 57, 0.9);;
+    padding: 60px; 
     border-radius: 10px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    max-width: 1200px;
-    width: 100%;
     text-align: center;
     margin-right: 40px;
 }
@@ -72,6 +57,7 @@ input:focus {
     font-weight: bold;
     cursor: pointer;
     transition: all 0.3s ease;
+    margin-left: 70px;
 }
 
 button:hover {
@@ -80,51 +66,12 @@ button:hover {
     transform: scale(1.05);
 }
 
+/* Mensagem de erro ou sucesso */
 p {
     text-align: center;
     color: rgb(47, 44, 44);
     font-size: 16px;
     margin-left: 75px;
     margin-bottom: 5px;
-}
-
-/* Extra large screens */
-@media (min-width: 1920px) {
-    body {
-        background: linear-gradient(to bottom, #000000, #272042, #000000) !important;
-    }
-
-    .tudo {
-        padding: 4rem;
-        /* Ajusta o espaçamento para telas maiores */
-        justify-content: center;
-    }
-
-    form {
-        max-width: 200px;
-        /* Aumenta a largura máxima do formulário */
-        padding: 3rem;
-        /* Adiciona mais espaçamento interno */
-    }
-
-    h2,
-    .paragrafo {
-        font-size: 3rem;
-        /* Aumenta o tamanho da fonte */
-    }
-
-    input {
-        font-size: 1.2rem;
-        /* Ajusta o tamanho da fonte dos inputs */
-        padding: 1.2rem;
-        /* Adiciona mais espaçamento interno */
-    }
-
-    button {
-        font-size: 1.2rem;
-        /* Aumenta o tamanho da fonte do botão */
-        padding: 1.2rem;
-        /* Adiciona mais espaçamento interno */
-    }
 }
 
