--- a/cripto-react/src/pages/Login.css
+++ b/cripto-react/src/pages/Login.css
@@ -33,7 +33,7 @@
     font-size: 20px;
 }
 
-form {
+.form {
     background: rgba(255, 255, 255, 0.9);
     padding: 60px;
     border-radius: 10px;
@@ -45,7 +45,7 @@ form {
 }
 
 /* Inputs */
-input {
+.input {
     display: flex;
     justify-content: center;
     width: 500px;
@@ -56,6 +56,7 @@ input {
     background: #f5f5f5;
     outline: none;
     margin-bottom: 1rem;
+    margin-left: 325PX;
 }
 
 input:focus {
