--- a/cripto-react/src/pages/Home.css
+++ b/cripto-react/src/pages/Home.css
@@ -179,7 +179,7 @@ body {
   justify-content: center;
   align-items: center;
   padding: 20px;
-  margin: 200px 0 0 28px;
+  margin: 200px 0 90px 28px;
   color: #fff;
 }
 
