--- a/cripto-react/src/pages/cadastro.css
+++ b/cripto-react/src/pages/cadastro.css
@@ -26,7 +26,13 @@
     color: grey;
 }
 
+.paragrafo h2 {
+
+    color: rgb(94, 93, 93);
+}
+
 .paragrafo, h4 {
+    margin-top: 16px;
     font-size: 20px;
 }
 
