--- a/cripto-react/src/pages/Login.css
+++ b/cripto-react/src/pages/Login.css
@@ -1,5 +1,5 @@
  /* Reset básico */
- {
+*{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -25,7 +25,7 @@
 
 .paragrafo {
     margin-left: 70px;
-    color: grey;
+    color: rgb(2, 2, 2);
 }
 
 .paragrafo, h4 {
@@ -87,7 +87,7 @@ button:hover {
 
 p {
     text-align: center;
-    color: rgb(47, 44, 44);
+    color: rgb(0, 0, 0);
     font-size: 16px;
     margin-left: 75px;
     margin-bottom: 5px;
