--- a/cripto-react/src/pages/Home.css
+++ b/cripto-react/src/pages/Home.css
@@ -5,22 +5,30 @@
   box-sizing: border-box;
 }
 
-/* Body */
-
 body {
   font-family: 'Orbitron', sans-serif;
   color: #fff;
+  position: relative;
+}
+body::before {
+  content: '';
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   background-image: linear-gradient(135deg, #000000, #1f1133, #000000);
   background-size: 200% 200%;
-  background-repeat: no-repeat;
+  z-index: -1;
   animation: bgShift 10s ease infinite;
+  pointer-events: none; 
 }
-
 @keyframes bgShift {
   0% { background-position: 0% 50%; }
   50% { background-position: 100% 50%; }
   100% { background-position: 0% 50%; }
 }
+
 /* Seção Moeda + Navbar */
 .navbar-img-moeda {
   display: flex;
