--- a/cripto-react/src/components/CoursePage.module.css
+++ b/cripto-react/src/components/CoursePage.module.css
@@ -72,4 +72,27 @@
   justify-content: center;  /* Centraliza horizontalmente */
   transform: translate(50%, -50%);
   }
+
+  .loadingContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    gap: 1rem;
+  }
+  
+  .spinner {
+    width: 50px;
+    height: 50px;
+    border: 5px solid #f3f3f3;
+    border-top: 5px solid #b12092;
+    border-radius: 50%;
+    animation: spin 1s linear infinite;
+  }
+  
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
   
