--- a/cripto-react/src/pages/Home.css
+++ b/cripto-react/src/pages/Home.css
@@ -11,21 +11,6 @@ html, body {
   position: relative;
 }
 
-body::before {
-  content: '';
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-image: linear-gradient(135deg, #000000, #1f1133, #000000);
-  background-size: 200% 200%;
-  z-index: -1;
-  animation: bgShift 10s ease infinite;
-  pointer-events: none; 
-  overflow-x: hidden;
-  max-width: 100vw;
-}
 
 @keyframes bgShift {
   0% { background-position: 0% 50%; }
@@ -154,7 +139,7 @@ body::before {
   justify-content: center;
   border-radius: 20px;
   background: linear-gradient(#1a1a1a, #1a1a1a) padding-box,
-              linear-gradient(135deg, #3f025b, #b12092) border-box;
+              linear-gradient(135deg, #3f025b, #320d2a) border-box;
   border: 3px solid transparent;
   transition: transform 0.3s ease;
 }
@@ -281,3 +266,4 @@ body::before {
     text-align: center;
   }
 }
+
