--- a/cripto-react/src/pages/About.css
+++ b/cripto-react/src/pages/About.css
@@ -55,17 +55,16 @@ body {
 
 .textoEsquerdo p,
 .textoDireito p {
-    font-family: 'Inter', sans-serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-weight: 400;
     display: flex;
     text-align: center;
-    font-size: 18px;
+    font-size: 25px;
     color: rgba(225, 225, 225, 0.903);
     margin-top: 10px;
     margin-left: auto;
     margin-right: auto;
-    line-height: 1.6;
-    text-transform: uppercase;
+
 }
 
 .imgMundo {
@@ -147,12 +146,11 @@ body {
 }
 
 .divCentral p {
-    font-family: 'Inter', sans-serif;
     font-weight: 400;
-    font-size: 18px;
+    font-size: 25px;
     color: rgba(225, 225, 225, 0.903);
     line-height: 1.6;
-    text-transform: uppercase;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 
