--- a/cripto-react/src/components/Assistent.module.css
+++ b/cripto-react/src/components/Assistent.module.css
@@ -1,6 +1,4 @@
-/* src/components/Assistent/Assistent.module.css */
 
-/* Container principal */
 .container {
   position: fixed;
   bottom: 20px;
@@ -31,8 +29,8 @@
 }
 
 /* Imagem do avatar */
-.avatarImage {
-  width: 100%;
+.asisstent {
+  max-width: 100%;
   height: 100%;
   object-fit: cover;
   border-radius: 50%;
