--- a/cripto-react/src/pages/ProfilePage.module.css
+++ b/cripto-react/src/pages/ProfilePage.module.css
@@ -1,10 +1,10 @@
 .container {
     padding: 20px;
     position: relative;
+    background-color: #fff;
 }
 
 .profileContainer {
-    background: #fff;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -18,6 +18,12 @@
     right: 0;
     z-index: 10;
 }
+p {
+  color: #000;
+  font-size: 18px;
+  font-weight: bold;
+}
+
 
 .title {
     font-size: 2rem;
