--- a/cripto-react/src/pages/ProfilePage.module.css
+++ b/cripto-react/src/pages/ProfilePage.module.css
@@ -47,12 +47,11 @@ p {
 .name {
     font-size: 1.5rem;
     margin: 0.5rem 0;
-    color: #000;
 }
 
 .bio {
     font-size: 1rem;
-    color: #666;
+    color: #3f025b;
     text-align: center;
     margin-top: 10px;
 }
@@ -73,7 +72,6 @@ p {
     display: flex;
     gap: 15px;
     justify-content: center;
-    margin-top: 20px;
 }
 
 /* Estilização compartilhada para botão e link */
@@ -108,6 +106,12 @@ p {
 
 /* Formulário */
 .form {
+    background-color: rgba(255, 254, 255, 0.3);
+    /* Cor de fundo escura para o formulário */
+    padding: 20px;
+    /* Adicione um pouco de padding para o conteúdo não ficar grudado nas bordas */
+    border-radius: 8px;
+    /* Opcional: arredonda as bordas do formulário */
     display: flex;
     flex-direction: column;
     gap: 1rem;
@@ -120,7 +124,8 @@ p {
 }
 
 /* Inputs */
-.input, .textarea {
+.input,
+.textarea {
     width: 100%;
     padding: 10px;
     border: 1px solid #ccc;
@@ -130,4 +135,3 @@ p {
 .textarea {
     resize: vertical;
 }
-
