arrumando link do botão da home

--- a/cripto-react/src/pages/Home.css
+++ b/cripto-react/src/pages/Home.css
@@ -222,6 +222,10 @@ html, body {
   color: #b2b2b2;
 }
 
+.simulador a {
+  text-decoration: none;
+}
+
 .simuladorButton {
   margin-top: 50px;
   background: linear-gradient(135deg, #3f025b, #b12092);
