Arrumando logo do footer

--- a/cripto-react/src/components/Footer.css
+++ b/cripto-react/src/components/Footer.css
@@ -10,7 +10,9 @@
   }
   
   .footerInfo .logo {
-    margin-left: 912px;
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .detalhes {
