--- a/cripto-react/src/components/Navbar2.module.css
+++ b/cripto-react/src/components/Navbar2.module.css
@@ -3,6 +3,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  height: 100px;
+  border-radius: 40px;
   padding: 20px 40px;
   background-color: rgba(10, 0, 19, 0.185);
   position: sticky;
@@ -30,6 +32,7 @@
   border-radius: 24px;
   color: #fff;
   transition: background-color 0.3s ease, color 0.3s ease, box-shadow 0.3s ease;
+
 }
 
 .nav:hover {
