--- a/cripto-react/src/components/Navbar.module.css
+++ b/cripto-react/src/components/Navbar.module.css
@@ -8,6 +8,7 @@
   position: sticky;
   top: 0;
   z-index: 1000;
+  border-radius: 38px;
 }
 
 .logo {
@@ -27,7 +28,7 @@
   font-weight: 500;
   font-size: 18px;
   padding: 10px 14px;
-  border-radius: 24px;
+  border-radius: 12px;
   color: #fff;
   transition: background-color 0.3s ease, color 0.3s ease, box-shadow 0.3s ease;
 }
@@ -35,7 +36,7 @@
 .nav:hover {
   background-color: transparent;
   color: #fff;
-  box-shadow: 0 0 8px #362c5b;
+  box-shadow: 0 0 8px #80789a;
 }
 
 /* Botão Cadastre-se */
