--- a/cripto-react/src/components/Navbar2.module.css
+++ b/cripto-react/src/components/Navbar2.module.css
@@ -4,7 +4,7 @@
   justify-content: space-between;
   align-items: center;
   height: 100px;
-  border-radius: 40px;
+  border-radius: 38px;
   padding: 20px 40px;
   background-color: rgba(10, 0, 19, 0.185);
   position: sticky;
@@ -38,7 +38,7 @@
 .nav:hover {
   background-color: transparent;
   color: #fff;
-  box-shadow: 0 0 8px #362c5b;
+   box-shadow: 0 0 8px #80789a;
 }
 
 /* Botão Cadastre-se */
