arrumando e centralizando box da pagina de login

--- a/cripto-react/src/pages/Login.css
+++ b/cripto-react/src/pages/Login.css
@@ -17,10 +17,10 @@
 }
 
 .box {
-    margin-left: 50px;
     width: 100%;
     display: flex;
     justify-content: center;
+    margin-right: 250px;
 }
 
 .paragrafo {
