--- a/cripto-react/src/pages/cadastro.css
+++ b/cripto-react/src/pages/cadastro.css
@@ -19,7 +19,8 @@
     max-width: 100%;
     display: flex;
     justify-content: center;
-    margin-left: 0; /* Remove margem lateral */
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .paragrafo {
