--- a/cripto-react/src/pages/QuizPage.module.css
+++ b/cripto-react/src/pages/QuizPage.module.css
@@ -15,27 +15,27 @@
     width: 100%;
     border: 4px solid transparent;
     background:
-    linear-gradient(#000, #000) padding-box,
+    linear-gradient(#f2f0efe1, #f2f0efe1) padding-box,
     linear-gradient(to right, #b12092, #3f025b, #b12092) border-box;
-    box-shadow: 0 4px 12px rgba(202, 3, 252, 0.356);
+    box-shadow: 0 8px 20px rgba(201, 13, 248, 0.356);
   }
   
   .title {
     font-size: 24px;
     margin-bottom: 1.5rem;
-    color: #fff;
+    color: #312f31;
     text-align: center;
   }
   
   .questionBlock {
     margin-bottom: 1.5rem;
-    border-bottom: 1px solid #eee;
+    border-bottom: 1px solid #312f31;
     padding-bottom: 1rem;
   }
   
   .questionText {
     font-size: 16px;
-    color: #fff;
+    color: #312f31;
     margin-bottom: 0.5rem;
     margin-left: 0;
   }
@@ -51,10 +51,11 @@
     font-size: 14px;
     cursor: pointer;
     transition: 0.2s ease;
+    color: #312f31;
   }
   .optionLabel:hover {
     background:
-    linear-gradient(#000, #000) padding-box,
+    linear-gradient(#f2f0efe1, #f2f0efe1) padding-box,
     linear-gradient(to right, #b12092, #3f025b, #b12092) border-box;
   }
   span {
