--- a/cripto-react/src/pages/About.css
+++ b/cripto-react/src/pages/About.css
@@ -24,6 +24,17 @@ body {
     100% { background-position: 0% 50%; }
   }
 
+.voltarHome{
+    cursor: pointer;
+  }
+
+  .voltarHome img {
+    margin-top: 20px;
+    margin-left: 25px ;
+    width: 110px;
+    height: 70px;
+  }
+
 .intro {
     display: flex;
     justify-content: space-between;
