--- a/cripto-react/src/pages/Login.css
+++ b/cripto-react/src/pages/Login.css
@@ -16,6 +16,22 @@
     padding: 2rem;
 }
 
+.voltarHome {
+    cursor: pointer;
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    z-index: 1000;
+    /* Coloca o botão acima de outros elementos */
+}
+
+.voltarHome img {
+    margin-top: 20px;
+    margin-left: 25px;
+    width: 110px;
+    height: 70px;
+}
+
 .box {
     width: 100%;
     display: flex;
