--- a/cripto-react/src/components/Navbar.module.css
+++ b/cripto-react/src/components/Navbar.module.css
@@ -1,15 +1,20 @@
-/* Navbar container */
+
+
 .navbar {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 20px 40px;
-  background-color: rgba(11, 3, 12, 0.218);
-  position: sticky;
+  background-color: rgba(38, 10, 42, 0.063); /* Melhorar contraste */
+  backdrop-filter: blur(10px); /* Efeito de vidro opcional */
+  position: fixed; /* <-- Torna a navbar fixa no topo */
   top: 0;
+  left: 0;
+  width: 100%;
   z-index: 1000;
-  border-radius: 38px;
+  border-radius: 0 0 24px 24px; /* Arredonda apenas a parte de baixo */
 }
+
 
 .logo {
   cursor: pointer;
