--- a/cripto-react/src/components/Assistent.module.css
+++ b/cripto-react/src/components/Assistent.module.css
@@ -59,7 +59,7 @@
 
 
 .header {
-  background-color: #321e68;
+  background-color: #430261;
   color: white;
   padding: 12px 15px;
   display: flex;
