--- a/cripto-react/src/pages/About.css
+++ b/cripto-react/src/pages/About.css
@@ -11,7 +11,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: linear-gradient(135deg, #000000, #1f1133, #000000);
+    background-image: linear-gradient(135deg, #000000, #14071c, #000000);
     background-size: 200% 200%;
     z-index: -1;
     animation: bgShift 10s ease infinite;
