--- a/cripto-react/src/components/Navbar2.module.css
+++ b/cripto-react/src/components/Navbar2.module.css
@@ -3,13 +3,17 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 100px;
-  border-radius: 38px;
   padding: 20px 40px;
   background-color: rgba(10, 0, 19, 0.185);
   position: sticky;
+  background-color: rgba(38, 10, 42, 0.063); /* Melhorar contraste */
+  backdrop-filter: blur(3px); /* Efeito de vidro opcional */
+  position: fixed; /* <-- Torna a navbar fixa no topo */
   top: 0;
+  left: 0;
+  width: 100%;
   z-index: 1000;
+  border-radius: 0 0 24px 24px; /* Arredonda apenas a parte de baixo */
 }
 
 .logo {
