--- a/cripto-react/src/components/Navbar2.module.css
+++ b/cripto-react/src/components/Navbar2.module.css
@@ -52,7 +52,7 @@
   font-size: 18px;
   border: none;
   border-radius: 24px;
-  font-family: 'Orbitron', sans-serif;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   cursor: pointer;
   transition: background-color 0.3s ease, color 0.3s ease, box-shadow 0.3s ease, transform 0.3s ease;
   display: flex;
