--- a/cripto-react/src/pages/Home.css
+++ b/cripto-react/src/pages/Home.css
@@ -97,15 +97,15 @@ html, body {
 }
 
 .frase h2 {
-  font-family: 'Inconsolata', sans-serif;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-weight: 500;
   font-size: 50px;
   margin: 50px 0;
 }
 
 .frase p {
-  font-family: 'Inconsolata', sans-serif;
-  font-size: 40px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 35px;
   color: #ffffffbe;
 }
 
