--- a/cripto-react/src/pages/LessonPage.module.css
+++ b/cripto-react/src/pages/LessonPage.module.css
@@ -14,17 +14,27 @@
   text-align: center;
 }
 
-.title {
-  font-family: 'Orbitron', sans-serif;
+.voltarHome{
+    cursor: pointer;
+  }
+
+  .voltarHome img {
+    margin-top: 20px;
+    margin-left: 25px;
+    width: 110px;
+    height: 70px;
+  }
+
+
+.title a {
   font-size: 2.5rem;
   font-weight: bold;
-  color: #fff;
+  color: #ece6e6eb;
 }
 
 .highlight {
-  font-family: 'Orbitron', sans-serif;
   font-size: 2.5rem;
-  color: #791475 ;
+  color: #861888;
 }
 
 .link {
@@ -36,9 +46,11 @@
 }
 
 .subtitle {
+  margin-top: 80px;
   font-size: 1.8rem;
   margin-bottom: 20px;
-  color: #fff;
+  color: #ece6e6eb;
+  font-weight: 500;
 }
 
 .content {
@@ -80,7 +92,7 @@
 
 .pdfContainer a {
   text-decoration: none;
-  color: #791475;
+  color: #6a646c;
   font-weight: 500;
   transition: color 0.3s;
 }
@@ -97,7 +109,7 @@
 }
 
 .simulatorLinkContainer {
-  margin-top: 30px;
+  margin-top: 50px;
   text-align: center;
 }
 
@@ -107,8 +119,8 @@
   background-color: #791475;
   color: white;
   text-decoration: none;
-  border-radius: 5px;
-  font-weight: bold;
+  border-radius: 24px;
+  font-weight: 500;
   margin-right: 25px;
 }
 
