--- a/cripto-react/src/pages/LessonPage.module.css
+++ b/cripto-react/src/pages/LessonPage.module.css
@@ -127,3 +127,11 @@
 .simulatorLink:hover {
   background-color: #590e56;
 }
+
+ .backArrow {
+    font-size: 24px;
+    color: #ffffff;
+    cursor: pointer;
+    transition: transform 0.2s ease-in-out;
+    margin-right: 60px;
+  }
