--- a/cripto-react/src/pages/Home.css
+++ b/cripto-react/src/pages/Home.css
@@ -62,6 +62,7 @@ html, body {
   box-sizing: border-box;
   overflow: hidden;
   opacity: 1;
+  margin-top: 70px;
 }
 
 .content h1 {
@@ -78,7 +79,7 @@ html, body {
 }
 
 .moeda-image {
-  max-width: 100%;
+  width: 700px;
   height: auto;
   animation: girar 10s linear infinite;
   transform-style: preserve-3d;
