--- a/cripto-react/src/pages/Home.css
+++ b/cripto-react/src/pages/Home.css
@@ -66,9 +66,9 @@ html, body {
 }
 
 .content h1 {
-  font-size: 80px;
+  font-size: 70px;
   color: #e4dfdfeb;
-  margin-bottom: 50px;
+  margin-bottom: 40px;
   text-align: center;
 }
 
@@ -79,11 +79,14 @@ html, body {
 }
 
 .moeda-image {
-  width: 700px;
+  max-width: 100%;
+  width: 620px; /* ou até mais se quiser, teste 850px, 900px */
   height: auto;
   animation: girar 10s linear infinite;
   transform-style: preserve-3d;
+  flex-shrink: 0;
 }
+
 
 @keyframes girar {
   from { transform: rotateY(0deg); }
@@ -100,7 +103,7 @@ html, body {
 .frase h2 {
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-weight: 500;
-  font-size: 50px;
+  font-size: 45px;
   margin: 50px 0;
 }
 
