--- a/cripto-react/src/pages/Home.css
+++ b/cripto-react/src/pages/Home.css
@@ -95,6 +95,7 @@ html, body {
 
 /* Frase Inspiradora */
 .frase {
+  margin-top: 140px;
   text-align: center;
   padding: 40px 20px;
   color: #ffffffbe;
@@ -103,7 +104,7 @@ html, body {
 .frase h2 {
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-weight: 500;
-  font-size: 45px;
+  font-size: 60px;
   margin: 50px 0;
 }
 
